Renamed library to library-p2r to be able to import it into eclipse with other projects named library

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		</developer>
 	</developers>
 	<modules>
-		<module>library</module>
+		<module>library-p2r</module>
 		<module>sample</module>
 		<module>extras</module>
 	</modules>
