--- a/library-p2r/pom.xml
+++ b/library-p2r/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.github.chrisbanes.pulltorefresh</groupId>
-	<artifactId>library</artifactId>
+	<artifactId>library-p2r</artifactId>
 	<packaging>apklib</packaging>
 	<name>Android-PullToRefresh Library</name>
 	
