--- a/sample/project.properties
+++ b/sample/project.properties
@@ -10,4 +10,4 @@
 # Project target.
 target=android-15
 android.library.reference.1=../library
-android.library.reference.2=../extras/PullToRefreshListFragment
+android.library.reference.2=../extra-listfragment
